--- a/ask/qa/templates/qa/form.html
+++ b/ask/qa/templates/qa/form.html
@@ -2,6 +2,7 @@
     <div class="alert alert-danger">{{ e }}</div>
 {% endfor %}
 <form action="/ask/" method="post" class="form-horizontal">
+    {% csrf_token %}
     <fieldset>
         {% for field in form %}
             <div class="control-group {% if field.errors %}has-errors{% endif %}">
